# EyeCore

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs
src/eyecore/: __init__.py  _compress.py  _core.pyi  _corpus.py  _db.py  _entity_db.py  _feed_report.py  _feed_scraper.py  _feed_store.py  _graph.py  _llm.py  corpus_registry.py
tests/: conftest.py  test_compress.py  test_corpus.py  test_db.py  test_graph.py  test_llm.py
